# windows-client

./: README.md  package-lock.json  package.json
src/: type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/data/: dictionary.rs  mod.rs  settings.rs
src-tauri/src/data/items/: directory.rs  document.rs  mod.rs
src/app/: appWrapper.tsx  layout.tsx  page.tsx  settingsWrapper.tsx
src/app/components/header/: header.tsx  style.ts
src/app/components/header/components/: viewButtons.tsx
src/app/components/hintWrapper/: hintWrapper.tsx  style.ts
src/app/components/menu/: menu.tsx  style.ts  type.ts
src/app/components/menu/components/: directoryItem.tsx  documentItem.tsx  dropIndicator.tsx
src/app/components/title/: navigation.ts  shortcuts.ts  style.ts  title.tsx  type.ts
src/app/components/title/components/: dropDownMenu.tsx  menuItem.tsx
src/app/directory/: page.tsx  style.ts
src/app/directory/components/: columnDropIndicator.tsx  columnItem.tsx  createColumnItem.tsx  directorySmallItem.tsx  documentSmallItem.tsx
src/app/document/: page.tsx  style.ts
src/app/document/components/editor/: editor.tsx
src/app/settings/: page.tsx
src/app/styles/: globalStyles.ts  icons.tsx  style.ts  themeWrapper.tsx
src/contexts/: fontScaleContext.ts  viewModeContext.ts
src/functions/: createDirectory.ts  createDocument.ts  remove.ts
src/hooks/: useCodeMirror.ts  useDitectoryTitleState.ts  useDocumentState.ts
src/utils/: getTime.ts  spellCheckPlugin.ts
(+3 files in other folders)
