[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = ["global-shortcut-all", "window-minimize", "window-start-dragging", "window-close", "window-unminimize", "window-maximize", "window-hide", "window-unmaximize", "window-show"] }
window-shadows = "0.2.2"
uuid = "1.8.0"
bincode = "1.3.3"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
